src/Parser.output
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------

state 12 contains 1 shift/reduce conflicts.
state 25 contains 6 shift/reduce conflicts.
state 26 contains 6 shift/reduce conflicts.
state 27 contains 6 shift/reduce conflicts.
state 31 contains 6 shift/reduce conflicts.
state 51 contains 6 shift/reduce conflicts.
state 52 contains 6 shift/reduce conflicts.
state 53 contains 6 shift/reduce conflicts.
state 54 contains 6 shift/reduce conflicts.
state 55 contains 6 shift/reduce conflicts.
state 56 contains 6 shift/reduce conflicts.
state 57 contains 6 shift/reduce conflicts.
state 58 contains 6 shift/reduce conflicts.
state 59 contains 6 shift/reduce conflicts.
state 60 contains 6 shift/reduce conflicts.
state 61 contains 6 shift/reduce conflicts.
state 62 contains 6 shift/reduce conflicts.
state 63 contains 6 shift/reduce conflicts.
state 64 contains 6 shift/reduce conflicts.
state 67 contains 6 shift/reduce conflicts.
state 93 contains 6 shift/reduce conflicts.
state 95 contains 6 shift/reduce conflicts.
state 98 contains 6 shift/reduce conflicts.
state 100 contains 6 shift/reduce conflicts.
state 102 contains 20 shift/reduce conflicts.

terminal eof is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCmd -> Expr                            (0)
	Expr -> SimpleExpr                                 (1)
	Expr -> not Expr                                   (2)
	Expr -> '-' Expr                                   (3)
	Expr -> Expr '+' Expr                              (4)
	Expr -> Expr '-' Expr                              (5)
	Expr -> Expr '=' Expr                              (6)
	Expr -> Expr '<>' Expr                             (7)
	Expr -> Expr '<' Expr                              (8)
	Expr -> Expr '>' Expr                              (9)
	Expr -> Expr '<=' Expr                             (10)
	Expr -> Expr '>=' Expr                             (11)
	Expr -> if Expr then Expr else Expr                (12)
	Expr -> '-.' Expr                                  (13)
	Expr -> Expr '+.' Expr                             (14)
	Expr -> Expr '-.' Expr                             (15)
	Expr -> Expr '*.' Expr                             (16)
	Expr -> Expr '/.' Expr                             (17)
	Expr -> let ID '=' Expr in Expr                    (18)
	Expr -> let rec FunDef in Expr                     (19)
	Expr -> Expr ActualArgs                            (20)
	Expr -> Elems                                      (21)
	Expr -> let '(' Pat ')' '=' Expr in Expr           (22)
	Expr -> SimpleExpr '.' '(' Expr ')' '<-' Expr      (23)
	Expr -> Expr ';' Expr                              (24)
	Expr -> ArrayCreate SimpleExpr SimpleExpr          (25)
	Expr -> error                                      (26)
	SimpleExpr -> '(' Expr ')'                         (27)
	SimpleExpr -> '(' ')'                              (28)
	SimpleExpr -> bool                                 (29)
	SimpleExpr -> int                                  (30)
	SimpleExpr -> float                                (31)
	SimpleExpr -> ID                                   (32)
	SimpleExpr -> SimpleExpr '.' '(' Expr ')'          (33)
	ID -> id                                           (34)
	ID -> wild                                         (35)
	FunDef -> ID FormalArgs '=' Expr                   (36)
	FormalArgs -> ID FormalArgs                        (37)
	FormalArgs -> ID                                   (38)
	ActualArgs -> ActualArgs SimpleExpr                (39)
	ActualArgs -> SimpleExpr                           (40)
	Elems -> Elems ',' Expr                            (41)
	Elems -> Expr ',' Expr                             (42)
	Pat -> Pat ',' ID                                  (43)
	Pat -> ID ',' ID                                   (44)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	bool           { TokenBool $$ }
	int            { TokenInt $$ }
	float          { TokenFloat $$ }
	not            { TokenNot }
	'-'            { TokenMinus }
	'+'            { TokenPlus }
	'-.'           { TokenMinusDot }
	'+.'           { TokenPlusDot }
	'*.'           { TokenAstDot }
	'/.'           { TokenSlashDot }
	'='            { TokenEq }
	'<>'           { TokenLtGt }
	'<='           { TokenLe }
	'>='           { TokenGe }
	'<'            { TokenLt }
	'>'            { TokenGt }
	if             { TokenIf }
	then           { TokenThen }
	else           { TokenElse }
	id             { TokenID $$ }
	let            { TokenLet }
	in             { TokenIn }
	rec            { TokenRec }
	','            { TokenComma }
	ArrayCreate    { TokenArrayCreate }
	'.'            { TokenDot }
	'<-'           { TokenRArrow }
	';'            { TokenSemi }
	'('            { TokenLParen }
	')'            { TokenRParen }
	eof            { TokenEOF }
	wild           { TokenWild }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCmd rule  0
	Expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	SimpleExpr      rules 27, 28, 29, 30, 31, 32, 33
	ID              rules 34, 35
	FunDef          rule  36
	FormalArgs      rules 37, 38
	ActualArgs      rules 39, 40
	Elems           rules 41, 42
	Pat             rules 43, 44

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	Expr           goto state 10
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 1


	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	id             shift, and enter state 7
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	SimpleExpr     goto state 2
	ID             goto state 3

State 2

	Expr -> SimpleExpr .                                (rule 1)
	SimpleExpr -> SimpleExpr . '.' '(' Expr ')'         (rule 33)

	'.'            shift, and enter state 48


State 3

	SimpleExpr -> ID .                                  (rule 32)

	bool           reduce using rule 32
	int            reduce using rule 32
	float          reduce using rule 32
	'-'            reduce using rule 32
	'+'            reduce using rule 32
	'-.'           reduce using rule 32
	'+.'           reduce using rule 32
	'*.'           reduce using rule 32
	'/.'           reduce using rule 32
	'='            reduce using rule 32
	'<>'           reduce using rule 32
	'<='           reduce using rule 32
	'>='           reduce using rule 32
	'<'            reduce using rule 32
	'>'            reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	id             reduce using rule 32
	in             reduce using rule 32
	','            reduce using rule 32
	'.'            reduce using rule 32
	';'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	wild           reduce using rule 32
	%eof           reduce using rule 32


State 4

	SimpleExpr -> bool .                                (rule 29)

	bool           reduce using rule 29
	int            reduce using rule 29
	float          reduce using rule 29
	'-'            reduce using rule 29
	'+'            reduce using rule 29
	'-.'           reduce using rule 29
	'+.'           reduce using rule 29
	'*.'           reduce using rule 29
	'/.'           reduce using rule 29
	'='            reduce using rule 29
	'<>'           reduce using rule 29
	'<='           reduce using rule 29
	'>='           reduce using rule 29
	'<'            reduce using rule 29
	'>'            reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	id             reduce using rule 29
	in             reduce using rule 29
	','            reduce using rule 29
	'.'            reduce using rule 29
	';'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	wild           reduce using rule 29
	%eof           reduce using rule 29


State 5

	SimpleExpr -> int .                                 (rule 30)

	bool           reduce using rule 30
	int            reduce using rule 30
	float          reduce using rule 30
	'-'            reduce using rule 30
	'+'            reduce using rule 30
	'-.'           reduce using rule 30
	'+.'           reduce using rule 30
	'*.'           reduce using rule 30
	'/.'           reduce using rule 30
	'='            reduce using rule 30
	'<>'           reduce using rule 30
	'<='           reduce using rule 30
	'>='           reduce using rule 30
	'<'            reduce using rule 30
	'>'            reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	id             reduce using rule 30
	in             reduce using rule 30
	','            reduce using rule 30
	'.'            reduce using rule 30
	';'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	wild           reduce using rule 30
	%eof           reduce using rule 30


State 6

	SimpleExpr -> float .                               (rule 31)

	bool           reduce using rule 31
	int            reduce using rule 31
	float          reduce using rule 31
	'-'            reduce using rule 31
	'+'            reduce using rule 31
	'-.'           reduce using rule 31
	'+.'           reduce using rule 31
	'*.'           reduce using rule 31
	'/.'           reduce using rule 31
	'='            reduce using rule 31
	'<>'           reduce using rule 31
	'<='           reduce using rule 31
	'>='           reduce using rule 31
	'<'            reduce using rule 31
	'>'            reduce using rule 31
	then           reduce using rule 31
	else           reduce using rule 31
	id             reduce using rule 31
	in             reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	';'            reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	wild           reduce using rule 31
	%eof           reduce using rule 31


State 7

	ID -> id .                                          (rule 34)

	bool           reduce using rule 34
	int            reduce using rule 34
	float          reduce using rule 34
	'-'            reduce using rule 34
	'+'            reduce using rule 34
	'-.'           reduce using rule 34
	'+.'           reduce using rule 34
	'*.'           reduce using rule 34
	'/.'           reduce using rule 34
	'='            reduce using rule 34
	'<>'           reduce using rule 34
	'<='           reduce using rule 34
	'>='           reduce using rule 34
	'<'            reduce using rule 34
	'>'            reduce using rule 34
	then           reduce using rule 34
	else           reduce using rule 34
	id             reduce using rule 34
	in             reduce using rule 34
	','            reduce using rule 34
	'.'            reduce using rule 34
	';'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	wild           reduce using rule 34
	%eof           reduce using rule 34


State 8

	SimpleExpr -> '(' . Expr ')'                        (rule 27)
	SimpleExpr -> '(' . ')'                             (rule 28)

	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	')'            shift, and enter state 47
	wild           shift, and enter state 9

	Expr           goto state 46
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 9

	ID -> wild .                                        (rule 35)

	bool           reduce using rule 35
	int            reduce using rule 35
	float          reduce using rule 35
	'-'            reduce using rule 35
	'+'            reduce using rule 35
	'-.'           reduce using rule 35
	'+.'           reduce using rule 35
	'*.'           reduce using rule 35
	'/.'           reduce using rule 35
	'='            reduce using rule 35
	'<>'           reduce using rule 35
	'<='           reduce using rule 35
	'>='           reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	id             reduce using rule 35
	in             reduce using rule 35
	','            reduce using rule 35
	'.'            reduce using rule 35
	';'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	wild           reduce using rule 35
	%eof           reduce using rule 35


State 10

	%start_parseCmd -> Expr .                           (rule 0)
	Expr -> Expr . '+' Expr                             (rule 4)
	Expr -> Expr . '-' Expr                             (rule 5)
	Expr -> Expr . '=' Expr                             (rule 6)
	Expr -> Expr . '<>' Expr                            (rule 7)
	Expr -> Expr . '<' Expr                             (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<=' Expr                            (rule 10)
	Expr -> Expr . '>=' Expr                            (rule 11)
	Expr -> Expr . '+.' Expr                            (rule 14)
	Expr -> Expr . '-.' Expr                            (rule 15)
	Expr -> Expr . '*.' Expr                            (rule 16)
	Expr -> Expr . '/.' Expr                            (rule 17)
	Expr -> Expr . ActualArgs                           (rule 20)
	Expr -> Expr . ';' Expr                             (rule 24)
	Elems -> Expr . ',' Expr                            (rule 42)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	'-'            shift, and enter state 32
	'+'            shift, and enter state 33
	'-.'           shift, and enter state 34
	'+.'           shift, and enter state 35
	'*.'           shift, and enter state 36
	'/.'           shift, and enter state 37
	'='            shift, and enter state 38
	'<>'           shift, and enter state 39
	'<='           shift, and enter state 40
	'>='           shift, and enter state 41
	'<'            shift, and enter state 42
	'>'            shift, and enter state 43
	id             shift, and enter state 7
	','            shift, and enter state 44
	';'            shift, and enter state 45
	'('            shift, and enter state 8
	wild           shift, and enter state 9
	%eof           accept

	SimpleExpr     goto state 30
	ID             goto state 3
	ActualArgs     goto state 31

State 11

	Expr -> SimpleExpr .                                (rule 1)
	Expr -> SimpleExpr . '.' '(' Expr ')' '<-' Expr     (rule 23)
	SimpleExpr -> SimpleExpr . '.' '(' Expr ')'         (rule 33)

	bool           reduce using rule 1
	int            reduce using rule 1
	float          reduce using rule 1
	'-'            reduce using rule 1
	'+'            reduce using rule 1
	'-.'           reduce using rule 1
	'+.'           reduce using rule 1
	'*.'           reduce using rule 1
	'/.'           reduce using rule 1
	'='            reduce using rule 1
	'<>'           reduce using rule 1
	'<='           reduce using rule 1
	'>='           reduce using rule 1
	'<'            reduce using rule 1
	'>'            reduce using rule 1
	then           reduce using rule 1
	else           reduce using rule 1
	id             reduce using rule 1
	in             reduce using rule 1
	','            reduce using rule 1
	'.'            shift, and enter state 29
	';'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	wild           reduce using rule 1
	%eof           reduce using rule 1


State 12

	Expr -> Elems .                                     (rule 21)
	Elems -> Elems . ',' Expr                           (rule 41)

	bool           reduce using rule 21
	int            reduce using rule 21
	float          reduce using rule 21
	'-'            reduce using rule 21
	'+'            reduce using rule 21
	'-.'           reduce using rule 21
	'+.'           reduce using rule 21
	'*.'           reduce using rule 21
	'/.'           reduce using rule 21
	'='            reduce using rule 21
	'<>'           reduce using rule 21
	'<='           reduce using rule 21
	'>='           reduce using rule 21
	'<'            reduce using rule 21
	'>'            reduce using rule 21
	then           reduce using rule 21
	else           reduce using rule 21
	id             reduce using rule 21
	in             reduce using rule 21
	','            shift, and enter state 28
			(reduce using rule 21)

	';'            reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	wild           reduce using rule 21
	%eof           reduce using rule 21


State 13

	Expr -> error .                                     (rule 26)

	bool           reduce using rule 26
	int            reduce using rule 26
	float          reduce using rule 26
	'-'            reduce using rule 26
	'+'            reduce using rule 26
	'-.'           reduce using rule 26
	'+.'           reduce using rule 26
	'*.'           reduce using rule 26
	'/.'           reduce using rule 26
	'='            reduce using rule 26
	'<>'           reduce using rule 26
	'<='           reduce using rule 26
	'>='           reduce using rule 26
	'<'            reduce using rule 26
	'>'            reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	id             reduce using rule 26
	in             reduce using rule 26
	','            reduce using rule 26
	';'            reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	wild           reduce using rule 26
	%eof           reduce using rule 26


State 14

	Expr -> not . Expr                                  (rule 2)

	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	Expr           goto state 27
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 15

	Expr -> '-' . Expr                                  (rule 3)

	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	Expr           goto state 26
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 16

	Expr -> '-.' . Expr                                 (rule 13)

	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	Expr           goto state 25
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 17

	Expr -> if . Expr then Expr else Expr               (rule 12)

	error          shift, and enter state 13
	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	not            shift, and enter state 14
	'-'            shift, and enter state 15
	'-.'           shift, and enter state 16
	if             shift, and enter state 17
	id             shift, and enter state 7
	let            shift, and enter state 18
	ArrayCreate    shift, and enter state 19
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	Expr           goto state 24
	SimpleExpr     goto state 11
	ID             goto state 3
	Elems          goto state 12

State 18

	Expr -> let . ID '=' Expr in Expr                   (rule 18)
	Expr -> let . rec FunDef in Expr                    (rule 19)
	Expr -> let . '(' Pat ')' '=' Expr in Expr          (rule 22)

	id             shift, and enter state 7
	rec            shift, and enter state 22
	'('            shift, and enter state 23
	wild           shift, and enter state 9

	ID             goto state 21

State 19

	Expr -> ArrayCreate . SimpleExpr SimpleExpr         (rule 25)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	id             shift, and enter state 7
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	SimpleExpr     goto state 20
	ID             goto state 3

State 20

	Expr -> ArrayCreate SimpleExpr . SimpleExpr         (rule 25)
	SimpleExpr -> SimpleExpr . '.' '(' Expr ')'         (rule 33)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	id             shift, and enter state 7
	'.'            shift, and enter state 48
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	SimpleExpr     goto state 74
	ID             goto state 3

State 21

	Expr -> let ID . '=' Expr in Expr                   (rule 18)

	'='            shift, and enter state 73


State 22

	Expr -> let rec . FunDef in Expr                    (rule 19)

	id             shift, and enter state 7
	wild           shift, and enter state 9

	ID             goto state 71
	FunDef         goto state 72

State 23

	Expr -> let '(' . Pat ')' '=' Expr in Expr          (rule 22)

	id             shift, and enter state 7
	wild           shift, and enter state 9

	ID             goto state 69
	Pat            goto state 70

State 24

	Expr -> Expr . '+' Expr                             (rule 4)
	Expr -> Expr . '-' Expr                             (rule 5)
	Expr -> Expr . '=' Expr                             (rule 6)
	Expr -> Expr . '<>' Expr                            (rule 7)
	Expr -> Expr . '<' Expr                             (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<=' Expr                            (rule 10)
	Expr -> Expr . '>=' Expr                            (rule 11)
	Expr -> if Expr . then Expr else Expr               (rule 12)
	Expr -> Expr . '+.' Expr                            (rule 14)
	Expr -> Expr . '-.' Expr                            (rule 15)
	Expr -> Expr . '*.' Expr                            (rule 16)
	Expr -> Expr . '/.' Expr                            (rule 17)
	Expr -> Expr . ActualArgs                           (rule 20)
	Expr -> Expr . ';' Expr                             (rule 24)
	Elems -> Expr . ',' Expr                            (rule 42)

	bool           shift, and enter state 4
	int            shift, and enter state 5
	float          shift, and enter state 6
	'-'            shift, and enter state 32
	'+'            shift, and enter state 33
	'-.'           shift, and enter state 34
	'+.'           shift, and enter state 35
	'*.'           shift, and enter state 36
	'/.'           shift, and enter state 37
	'='            shift, and enter state 38
	'<>'           shift, and enter state 39
	'<='           shift, and enter state 40
	'>='           shift, and enter state 41
	'<'            shift, and enter state 42
	'>'            shift, and enter state 43
	then           shift, and enter state 68
	id             shift, and enter state 7
	','            shift, and enter state 44
	';'            shift, and enter state 45
	'('            shift, and enter state 8
	wild           shift, and enter state 9

	SimpleExpr     goto state 30
	ID             goto state 3
	ActualArgs     goto state 31

State 25

	Expr -> Expr . '+' Expr                             (rule 4)
	Expr -> Expr . '-' Expr                             (rule 5)
	Expr -> Expr . '=' Expr                             (rule 6)
	Expr -> Expr . '<>' Expr                            (rule 7)
	Expr -> Expr . '<' Expr                             (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<=' Expr                            (rule 10)
	Expr -> Expr . '>=' Expr                            (rule 11)
	Expr -> '-.' Expr .                                 (rule 13)
	Expr -> Expr . '+.' Expr                            (rule 14)
	Expr -> Expr . '-.' Expr                            (rule 15)
	Expr -> Expr . '*.' Expr                            (rule 16)
	Expr -> Expr . '/.' Expr                            (rule 17)
	Expr -> Expr . ActualArgs                           (rule 20)
	Expr -> Expr . ';' Expr                             (rule 24)
	Elems -> Expr . ',' Expr                            (rule 42)

	bool           shift, and enter state 4
			(reduce using rule 13)

	int            shift, and enter state 5
			(reduce using rule 13)

	float          shift, and enter state 6
			(reduce using rule 13)

	'-'            reduce using rule 13
	'+'            reduce using rule 13
	'-.'           reduce using rule 13
	'+.'           reduce using rule 13
	'*.'           reduce using rule 13
	'/.'           reduce using rule 13
	'='            reduce using rule 13
	'<>'           reduce using rule 13
	'<='           reduce using rule 13
	'>='           reduce using rule 13
	'<'            reduce using rule 13
	'>'            reduce using rule 13
	then           reduce using rule 13
	else           reduce using rule 13
	id             shift, and enter state 7
			(reduce using rule 13)

	in             reduce using rule 13
	','            reduce using rule 13
	';'            reduce using rule 13
	'('            shift, and enter state 8
			(reduce using rule 13)

	')'            reduce using rule 13
	wild           shift, and enter state 9
			(reduce using rule 13)

	%eof           reduce using rule 13

	SimpleExpr     goto state 30
	ID             goto state 3
	ActualArgs     goto state 31

State 26

	Expr -> '-' Expr .                                  (rule 3)
	Expr -> Expr . '+' Expr                             (rule 4)
	Expr -> Expr . '-' Expr                             (rule 5)
	Expr -> Expr . '=' Expr                             (rule 6)
	Expr -> Expr . '<>' Expr                            (rule 7)
	Expr -> Expr . '<' Expr                             (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<=' Expr                            (rule 10)
	Expr -> Expr . '>=' Expr                            (rule 11)
	Expr -> Expr . '+.' Expr                            (rule 14)
	Expr -> Expr . '-.' Expr                            (rule 15)
	Expr -> Expr . '*.' Expr                            (rule 16)
	Expr -> Expr . '/.' Expr                            (rule 17)
	Expr -> Expr . ActualArgs                           (rule 20)
	Expr -> Expr . ';' Expr                             (rule 24)
	Elems -> Expr . ',' Expr                            (rule 42)

	bool           shift, and enter state 4
			(reduce using rule 3)

	int            shift, and enter state 5
			(reduce using rule 3)

	float          shift, and enter state 6
			(reduce using rule 3)

	'-'            reduce using rule 3
	'+'            reduce using rule 3
	'-.'           reduce using rule 3
	'+.'           reduce using rule 3
	'*.'           reduce using rule 3
	'/.'           reduce using rule 3
	'='            reduce using rule 3
	'<>'           reduce using rule 3
	'<='           reduce using rule 3
	'>='           reduce using rule 3
	'<'            reduce using rule 3
	'>'            reduce using rule 3
	then           reduce using rule 3
	else           reduce using rule 3
	id             shift, and enter state 7
			(reduce using rule 3)

	in             reduce using rule 3
	','            reduce using rule 3
	';'            reduce using rule 3
	'('            shift, and enter state 8
			(reduce using rule 3)

	')'            reduce using rule 3
	wild           shift, and enter state 9
			(reduce using rule 3)

	%eof           reduce using rule 3

	SimpleExpr     goto state 30
	ID             goto state 3
	ActualArgs     goto state 31

State 27

	Expr -> not Expr .                                  (rule 2)
	Expr -> Expr . '+' Expr                             (rule 4)
	Expr -> Expr . '-' Expr                             (rule 5)
	Expr -> Expr . '=' Expr                             (rule 6)
	Expr -> Expr . '<>' Expr                            (rule 7)
	Expr -> Expr . '<' Expr                             (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<=' Expr                            (rule 10)
	Expr -> Expr . '>=' Expr                            (rule 11)
	Expr -> Expr . '+.' Expr                            (rule 14)
	Expr -> Expr . '-.' Expr                            (rule 15)
	Expr -> Expr . '*.' Expr                            (rule 16)
	Expr -> Expr . '/.' Expr                            (rule 17)
	Expr -> Expr . ActualArgs                           (rule 20)
	Expr -> Expr . ';' Expr                             (rule 24)
	Elems -> Expr . ',' Expr                            (rule 42)

	bool           shift, and enter state 4
			(reduce using rule 2)

	int            shift, and enter state 5
			(reduce using rule 2)

	float          shift, and enter state 6
			(reduce using rule 2)

	'-'            reduce using rule 2
	'+'            reduce using rule 2
	'-.'           reduce using rule 2
	'+.'           reduce using rule 2
	'*.'           reduce using rule 2
	'/.'           reduce using rule 2
	'='            reduce using rule 2
	'<>'           reduce using rule 2
	'<='           reduce using rule 2
	'>='           reduce using rule 2
	'<'            reduce using rule 2
	'>'            reduce using rule 2
	then           reduce using rule 2
	else           reduce using rule 2
	id             shift, and enter state 7
			(reduce using rule 2)

	in             reduce using rule 2
	','            reduce using rule 2
	';'            reduce using rule 2
	'('            shift, and enter state 8
			(reduce using rule 2)

	')'            reduce using rule 2
	wild           shift, and enter state 9
			(reduce using rule 2)

	%eof           reduce using rule 2

	SimpleExpr     goto state 30
	ID             goto state 3
	ActualArgs     goto state 31

State 28

	Elems -> Elems ',' . Expr                           (rule 41)
